<resources>
    <string name="app_title">Movie World</string>
    <string name="title">Title</string>
    <string name="popular">Popular</string>
    <string name="top_rate">Top rated</string>
    <string name="up_coming">Up coming</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="similar">Similar</string>
    <string name="cast">Cast</string>
    <string name="screen_one">Screen one</string>
    <string name="screen_two">Screen two</string>
    <string name="open_drawer">Open drawer</string>
    <string name="rating_search">Rating :</string>
    <string name="do_you_want_to_exit_the_app">Do you want to exit the app?</string>
    <string name="close_the_app">Close the app</string>
    <string name="there_is_no_internet">There is no internet!</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Sign in</string>
    <string name="artist_detail">Artist Detail</string>
    <string name="know_for">Known for</string>
    <string name="biography">Biography</string>
    <string name="gender">Gender</string>
    <string name="birth_day">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="text_field_placeholder">Card Name, Category</string>
    <string name="search_place_holder">Card Name, Category</string>
    <string name="category_label">Category</string>
    <string name="merchant_label">Merchant</string>
    <string name="please_enter_valid_text">Please enter valid text</string>
    <string name="password">Password</string>
    <string name="support_ticket">Support Ticket</string>
    <string name="total_amount">Total Amount</string>
    <string name="app_name">Bitaqaty Business</string>
    <string name="copyright">Copyright © 2020 Bitaqaty. All rights reserved.</string>
    <string name="sign_welcome">Welcome\nto Bitaqaty Business</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="code">Code</string>
    <string name="sign_in">Sign in</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="current_lang">(English)</string>
    <string name="loading">Loading…</string>
    <string name="export">Export</string>
    <string name="print_report">Print</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="days">day(s)</string>
    <string name="hours">hour(s)</string>
    <string name="mins">minute(s)</string>
    <string name="secs">second(s)</string>
    <string name="share_to">Share to</string>
    <string name="err_server">Something went wrong</string>
    <string name="err_request_failed">Sorry, we were unable to process your request. Please try again shortly</string>
    <string name="err_internet">No Internet connection. \nMake sure that Wi-Fi or cellular mobile data is turned on, then try again.</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data Available</string>
    <string name="reLogin_error">Error login</string>
    <string name="refresh">Refresh</string>
    <string name="err_field_required">This field is required</string>
    <string name="err_invalid_email">Email should be like example@example.com</string>
    <string name="err_invalid_password">Invalid password</string>
    <string name="err_passwords_mismatch">Passwords don’t match</string>
    <string name="err_incorrect_username_password">Incorrect username/password</string>
    <string name="err_incorrect_username">Incorrect username</string>
    <string name="err_new_pass_match_old_pass">New password shouldn’t be as current password</string>
    <string name="err_session_ended">Login session has ended</string>
    <string name="err_sms_exceeded">You have reached maximum sms attempts, please contact administrator</string>
    <string name="err_sms_resend_exceeded">You have exceeded number of allowed sms try again later</string>
    <string name="err_invalid_verification_code">Incorrect verification code</string>
    <string name="err_verification_code_expired">Sms Verification code expired\n\nPlease,request a new code</string>
    <string name="err_try_again_later">You have exceeded number of allowed sms try again after\n</string>
    <string name="err_wrong_current_pass">Incorrect password</string>
    <string name="err_unauthorized">Session is expired, please login</string>
    <string name="err_account_no_saved_before">Account no. already saved before</string>
    <string name="noPermission">You don\'t have permissions to view this page</string>
    <string name="err_bank_account_not_found">Bank account not found</string>
    <string name="err_min_amount_per_request">Min. allowed amount per request is : XSAR</string>
    <string name="err_max_amount_per_request">Max. allowed amount per request is : XSAR</string>
    <string name="err_max_request_per_day">Max. allowed bank requests per day : D/R</string>
    <string name="err_max_amount_per_day">Max. allowed amount per day : XSAR</string>
    <string name="errSaveCredentials">All Card data must be entered and valid</string>
    <string name="errWrongDate">Wrong expiry data, make sure you enter right format</string>
    <string name="errCardHolderName">Card holder name is invalid.</string>
    <string name="errCardNumber">Card number is invalid.</string>
    <string name="errExpiryDate">Expiry date is invalid.</string>
    <string name="errCVV">CVV is invalid.</string>
    <string name="err_out_of_stock">%s is out of stock</string>
    <string name="err_insufficient_stock">Insufficient %s in stock</string>
    <string name="err_insufficient_balance">Insufficient balance</string>
    <string name="err_price_changed">Product Price changed, Please go back and try again</string>
    <string name="err_service_not_available">%s is out of stock</string>
    <string name="err_select_category">Please, Select a Category first</string>
    <string name="err_select_merchant">Please, Select a merchant first</string>
    <string name="err_select_from_first">Select from date first</string>
    <string name="err_invalid_custom_date">Invalid custom date</string>
    <string name="err_invalid_ticket_details">Maximum characters is : 1500</string>
    <string name="sign_instruction">To login, please enter your email address and password and click on Sign in</string>
    <string name="sign_username">Email address/Username*</string>
    <string name="sign_password">Password*</string>
    <string name="sign_forgot_password"><u>Forgot password ?</u></string>
    <string name="sign_signing">Signing in…</string>
    <string name="pass_enter_new_password">Enter new password</string>
    <string name="pass_instruction">Enter New Password and Confirm New Password and click Change</string>
    <string name="pass_change">Change</string>
    <string name="pass_current_pass">Current Password*</string>
    <string name="pass_new_pass">New Password*</string>
    <string name="pass_conf_new_pass">Confirm New Password*</string>
    <string name="pass_validation_1">Should be written in English</string>
    <string name="pass_validation_2">Contain at least 8 characters</string>
    <string name="pass_validation_3">Contain at least one small letter</string>
    <string name="pass_validation_4">Contain at least one capital letter</string>
    <string name="pass_validation_5">Contain at least one number</string>
    <string name="pass_applying_change">Applying change…</string>
    <string name="pass_change_success">Password is changed successfully, you can now login with the new password</string>
    <string name="reset_password">Restore Password</string>
    <string name="reset_password_choose_code">Please choose the method you need to receive verification code through then click Send</string>
    <string name="reset_instruction">To restore your forgotten password, please enter your email address, and click Send. An email message containing a link to reset your password will be sent to your email. Please note that this link is valid within one hour</string>
    <string name="to_reset_access_data">To reset your access data, please enter your username and click “Send”. A message containing verification code will be sent to you, please use that code to reset your access data. Please note that this code is valid within 3 Minutes</string>
    <string name="reset_email">Email Address/Username*</string>
    <string name="reset_link_sent">Link is resent</string>
    <string name="reset_resend">Resend link</string>
    <string name="reset_success_msg">An email has been sent to EMAIL_TXT, To reset your password, Please click on the verification link from Bitaqaty via email\n\nFor help: You can contact our Resellers support now\n\n\nIf you do not receive the message, you can click resend link</string>
    <string name="verification_enter_code">Enter Verification code</string>
    <string name="verification_instruction">Please enter the Sms Verification Code sent to your account’s mobile number and click Sign in</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_resend">Resend again</string>
    <string name="verification_resend_message">In case you didn’t receive code press</string>
    <string name="verification_resend_underline_resend_again"><u>Resend again</u></string>
    <string name="verification_trial">Trials</string>
    <string name="verification_wait">Wait</string>
    <string name="verification_seconds">Seconds</string>
    <string name="verification_verifying">Verifying…</string>
    <string name="verification_code_sent">Verification code sent</string>
    <string name="profile_account_no">Account no.</string>
    <string name="profile_last_visit_date">Last Visit Date</string>
    <string name="profile_reseller">(Reseller)</string>
    <string name="profile_sub_account">(Sub account)</string>
    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_signing_out">Signing Out…</string>
    <string name="hello">Hello, </string>
    <string name="home">Home</string>
    <string name="transactionLog">Transactions</string>
    <string name="productList">Products Discount List</string>
    <string name="more">More</string>
    <string name="recharge">Recharge</string>
    <string name="yourBalance">Balance:</string>
    <string name="supportTitle">Reseller Support Center</string>
    <string name="store">Store</string>
    <string name="cart">Cart</string>
    <string name="sar">SAR</string>
    <string name="sar_full">SAR</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="mada">MADA</string>
    <string name="credit">Credit Card</string>
    <string name="amex">AMEX</string>
    <string name="paypal">PayPal</string>
    <string name="rechargeLog">Recharging Log</string>
    <string name="rechargeRequests">Recharging requests</string>
    <string name="total_recommended_retail_price">Total Recommended Retail Price</string>
    <string name="total_profit">Total Commission</string>
    <string name="reseller_name">Reseller Name : </string>
    <string name="from_date">From Date : </string>
    <string name="to_date">To Date : </string>
    <string name="current_balance">Current balance : </string>
    <string name="no_of_trans">No. of Transactions : </string>
    <string name="cost_price">Total Cost Price : </string>
</resources>